--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -113,7 +113,7 @@
 	    android:layout_height="wrap_content"
 	    android:layout_alignLeft="@+id/dialogTitle"
 	    android:layout_centerVertical="true"
-	    android:text="Button" />
+	    android:text="@string/btn_generate_post" />
 
 	<Button
 	    android:id="@+id/update"
